--- a/res/player/zelda.properties
+++ b/res/player/zelda.properties
@@ -5,6 +5,8 @@ default_start_type=idle
 default_speed=2
 
 anim_idleSouth_name=idleSouth
+anim_idleSouth_type=idle
+anim_idleSouth_direction=South
 anim_idleSouth_xStart=8
 anim_idleSouth_yStart=19
 anim_idleSouth_numFrames=2
@@ -14,6 +16,8 @@ anim_idleSouth_flipHorizontally=false
 anim_idleSouth_speed=800
 
 anim_idleNorth_name=idleNorth
+anim_idleNorth_type=idle
+anim_idleNorth_direction=North
 anim_idleNorth_xStart=8
 anim_idleNorth_yStart=85
 anim_idleNorth_numFrames=1
@@ -23,6 +27,8 @@ anim_idleNorth_flipHorizontally=false
 anim_idleNorth_speed=800
 
 anim_idleEast_name=idleEast
+anim_idleEast_type=idle
+anim_idleEast_direction=East
 anim_idleEast_xStart=8
 anim_idleEast_yStart=118
 anim_idleEast_numFrames=2
@@ -32,6 +38,8 @@ anim_idleEast_flipHorizontally=false
 anim_idleEast_speed=800
 
 anim_idleWest_name=idleWest
+anim_idleWest_type=idle
+anim_idleWest_direction=West
 anim_idleWest_xStart=8
 anim_idleWest_yStart=52
 anim_idleWest_numFrames=2
@@ -41,6 +49,8 @@ anim_idleWest_flipHorizontally=false
 anim_idleWest_speed=800
 
 anim_walkSouth_name=walkSouth
+anim_walkSouth_type=walk
+anim_walkSouth_direction=South
 anim_walkSouth_xStart=80
 anim_walkSouth_yStart=20
 anim_walkSouth_numFrames=6
@@ -50,6 +60,8 @@ anim_walkSouth_flipHorizontally=false
 anim_walkSouth_speed=400
 
 anim_walkNorth_name=walkNorth
+anim_walkNorth_type=walk
+anim_walkNorth_direction=North
 anim_walkNorth_xStart=80
 anim_walkNorth_yStart=85
 anim_walkNorth_numFrames=3
@@ -59,6 +71,8 @@ anim_walkNorth_flipHorizontally=false
 anim_walkNorth_speed=200
 
 anim_walkEast_name=walkEast
+anim_walkEast_type=walk
+anim_walkEast_direction=East
 anim_walkEast_xStart=80
 anim_walkEast_yStart=118
 anim_walkEast_numFrames=6
@@ -68,6 +82,8 @@ anim_walkEast_flipHorizontally=false
 anim_walkEast_speed=400
 
 anim_walkWest_name=walkWest
+anim_walkWest_type=walk
+anim_walkWest_direction=West
 anim_walkWest_xStart=80
 anim_walkWest_yStart=52
 anim_walkWest_numFrames=6
