--- a/res/player/player.properties
+++ b/res/player/player.properties
@@ -2,8 +2,10 @@ spriteSheet_path=/player/player.png
 default_start_anim=idleSouth
 default_start_direction=South
 default_start_type=idle
-default_speed=3
+default_speed=2
 anim_idleSouth_name=idleSouth
+anim_idleSouth_type=idle
+anim_idleSouth_direction=South
 anim_idleSouth_xStart=8
 anim_idleSouth_yStart=4
 anim_idleSouth_numFrames=1
@@ -12,6 +14,8 @@ anim_idleSouth_tileSizeY=32
 anim_idleSouth_flipHorizontally=false
 anim_idleSouth_speed=400
 anim_idleNorth_name=idleNorth
+anim_idleNorth_type=idle
+anim_idleNorth_direction=North
 anim_idleNorth_xStart=72
 anim_idleNorth_yStart=4
 anim_idleNorth_numFrames=1
@@ -20,6 +24,8 @@ anim_idleNorth_tileSizeY=32
 anim_idleNorth_flipHorizontally=false
 anim_idleNorth_speed=400
 anim_idleEast_name=idleEast
+anim_idleEast_type=idle
+anim_idleEast_direction=East
 anim_idleEast_xStart=42
 anim_idleEast_yStart=4
 anim_idleEast_numFrames=1
@@ -28,6 +34,8 @@ anim_idleEast_tileSizeY=32
 anim_idleEast_flipHorizontally=true
 anim_idleEast_speed=400
 anim_idleWest_name=idleWest
+anim_idleWest_type=idle
+anim_idleWest_direction=West
 anim_idleWest_xStart=42
 anim_idleWest_yStart=4
 anim_idleWest_numFrames=1
@@ -37,6 +45,8 @@ anim_idleWest_flipHorizontally=false
 anim_idleWest_speed=400
 
 anim_walkSouth_name=walkSouth
+anim_walkSouth_type=walk
+anim_walkSouth_direction=South
 anim_walkSouth_xStart=8
 anim_walkSouth_yStart=72
 anim_walkSouth_numFrames=10
@@ -46,6 +56,8 @@ anim_walkSouth_flipHorizontally=false
 anim_walkSouth_speed=400
 
 anim_walkNorth_name=walkNorth
+anim_walkNorth_type=walk
+anim_walkNorth_direction=North
 anim_walkNorth_xStart=675
 anim_walkNorth_yStart=72
 anim_walkNorth_numFrames=10
@@ -55,6 +67,8 @@ anim_walkNorth_flipHorizontally=false
 anim_walkNorth_speed=400
 
 anim_walkEast_name=walkEast
+anim_walkEast_type=walk
+anim_walkEast_direction=East
 anim_walkEast_xStart=344
 anim_walkEast_yStart=72
 anim_walkEast_numFrames=10
@@ -64,6 +78,8 @@ anim_walkEast_flipHorizontally=true
 anim_walkEast_speed=400
 
 anim_walkWest_name=walkWest
+anim_walkWest_type=walk
+anim_walkWest_direction=West
 anim_walkWest_xStart=344
 anim_walkWest_yStart=72
 anim_walkWest_numFrames=10
